# foundations_assignements

./: .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: pylint.yml
assignment_1/: test.ipynb
life_expectancy/: cleaning.py  countries.py  i_o.py
life_expectancy/data/: sample.tsv
life_expectancy/tests/: conftest.py  test_cleaning.py
life_expectancy/tests/fixtures/: pt_life_expectancy_sample_expected.csv
